controllers/nginx/examples/as-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-lb
spec:
  template:
    metadata:
      labels:
        name: nginx-ingress-lb
    spec:
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.4
        name: nginx-ingress-lb
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10249
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        # use downward API
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 4444
        # we expose 8080 to access nginx stats in url /nginx_status
        # this is optional
        - containerPort: 8080
          hostPort: 8081
        args:
        - /nginx-ingress-controller-lb
        - --default-backend-service=default/default-http-backend
